--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
+        "rahulhaque/laravel-filepond": "^1.8",
+        "sopamo/laravel-filepond": "^1.1",
         "spatie/laravel-permission": "^5.5",
         "vinkla/hashids": "^9.1",
         "yajra/laravel-datatables": "^1.5"
