--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "maatwebsite/excel": "^3.1",
         "rahulhaque/laravel-filepond": "^1.8",
         "sopamo/laravel-filepond": "^1.1",
+        "spatie/laravel-backup": "6.16.5",
         "spatie/laravel-permission": "^5.5",
         "vinkla/hashids": "^9.1",
         "yajra/laravel-datatables": "^1.5"
