--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
         "rahulhaque/laravel-filepond": "^1.8",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "sopamo/laravel-filepond": "^1.1",
         "spatie/laravel-backup": "6.16.5",
         "spatie/laravel-permission": "^5.5",
